Provide workaround to avoid dropdown flickering on height change

--- a/src/styles/dropdown.scss
+++ b/src/styles/dropdown.scss
@@ -1,3 +1,12 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .rtms-dropdown {
   position: absolute;
   width: 100%;
@@ -7,6 +16,7 @@
   border: 1px solid #ced4da;
   border-radius: 4px;
   box-sizing: border-box;
+  animation: fadeIn 0.1s forwards;
 
   .rtms-dropdown-virtuoso {
     border-radius: 4px;
